src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Oppty_Owner_Check__c</fullName>
        <formula>IF(((Opportunity.OwnerId = &apos;005i00000038aNV&apos;) || (Opportunity.OwnerId = &apos;005i0000006PAbO&apos;) || (Opportunity.OwnerId = &apos;005i0000003852q&apos;) || (Opportunity.OwnerId = &apos;005i0000001y0gh&apos;) || (Opportunity.OwnerId = &apos;005i00000039XA2&apos;) || (Opportunity.OwnerId = &apos;005i0000001y0cB&apos;) || (Opportunity.OwnerId = &apos;005i0000006PAT0&apos;) || (Opportunity.OwnerId = &apos;005i0000001y0g3&apos;) || (Opportunity.OwnerId = &apos;005i0000003858F&apos;) || (Opportunity.OwnerId = &apos;005i0000001y0cV&apos;) || (Opportunity.OwnerId = &apos;005i0000000T5VX&apos;) || (Opportunity.OwnerId = &apos;005i0000001y0eg&apos;) || (Opportunity.OwnerId = &apos;005i000000384vG&apos;) || (Opportunity.OwnerId = &apos;005i0000006PAiY&apos;) || (Opportunity.OwnerId = &apos;005i0000003856O&apos;) || (Opportunity.OwnerId = &apos;005i0000004k9wa&apos;) || (Opportunity.OwnerId = &apos;005i0000003856J&apos;) || (Opportunity.OwnerId = &apos;005i00000055lI5&apos;) || (Opportunity.OwnerId = &apos;005i0000003855f&apos;) || (Opportunity.OwnerId = &apos;005i0000000T5Xc&apos;) || (Opportunity.OwnerId = &apos;005i00000039X8u&apos;) || (Opportunity.OwnerId = &apos;005i0000003858K&apos;) || (Opportunity.OwnerId = &apos;005i0000003858j&apos;) || (Opportunity.OwnerId = &apos;005i00000039XAH&apos;) || (Opportunity.OwnerId = &apos;005i000000390js&apos;) || (Opportunity.OwnerId = &apos;005i00000038527&apos;)) , true, false)</formula>
        <label>Oppty Owner Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oppty_Owner__c</fullName>
        <formula>Opportunity.OwnerId</formula>
        <label>Oppty Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Placed_on_Quote__c</fullName>
        <label>Order Placed on Quote</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Order_Placed_on_Line__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_AIT_Line_Count__c</fullName>
        <label>AIT Line Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>AIT</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_AIT_Total_Special_Value__c</fullName>
        <label>AIT Total Special Value</label>
        <summarizedField>Quote_Line__c.Total_Net_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>AIT</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_ASL_Approver__c</fullName>
        <label>ASL Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCASLApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_AfterMarket_Approver__c</fullName>
        <label>PC AfterMarket Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_AfterMarket_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Aftermarket_Services_Approver__c</fullName>
        <label>PC Aftermarket Services Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_Aftermarket_Services_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Bar_Code_Approver__c</fullName>
        <label>PC Bar Code Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_Bar_Code_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Blended_Margin_AIT__c</fullName>
        <formula>IF(
 PC_AIT_Total_Special_Value__c == 0, 
0, 
(PC_AIT_Total_Special_Value__c -  PC_Total_Cost_AIT__c  )/ PC_AIT_Total_Special_Value__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended Margin AIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Blended_Margin_EVM__c</fullName>
        <formula>IF(
 PC_EVM_Total_Special_Value__c == 0, 
0, 
(PC_EVM_Total_Special_Value__c -  PC_Total_Cost_EVM__c  )/ PC_EVM_Total_Special_Value__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended Margin EVM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Card_Approval__c</fullName>
        <label>PC Card Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_Card_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_EVM_ID__c</fullName>
        <label>EVM PC ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_EVM_Line_Count__c</fullName>
        <label>EVM Line Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>EVM</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Products_Count__c</fullName>
        <label>EVM Products Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>EVM</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Total_Special_Value__c</fullName>
        <label>EVM Total Special Value</label>
        <summarizedField>Quote_Line__c.Total_Net_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>EVM</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_Enable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC Enable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Error_LineItem__c</fullName>
        <label>PC Error LineItem</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Error_Message__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_High_Threshold_Count__c</fullName>
        <label>High Threshold Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Threshold_Identifier__c</field>
            <operation>equals</operation>
            <value>High</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_SB_PE_Deal_ID__c</fullName>
        <label>Legacy SB PE Deal ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_SB_Quote_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy SB Quote ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Legacy_SB_Quote_Margin__c</fullName>
        <label>Legacy SB Quote Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_SB_Total_Oracle__c</fullName>
        <label>Legacy SB Total Oracle</label>
        <summarizedField>Quote_Line__c.Standard_Net_Price__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_SB_Total_Sell__c</fullName>
        <label>Legacy SB Total Sell</label>
        <summarizedField>Quote_Line__c.Unit_Special_Price__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_NA_Product_Approver__c</fullName>
        <label>PC NA Product Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCNAProductApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_NumberFormat__c</fullName>
        <label>PC NumberFormat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Opp_Owner_Theater__c</fullName>
        <formula>Opportunity.Owner_Theater__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PriceAll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC PriceAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Quote_SF_Id__c</fullName>
        <externalId>true</externalId>
        <label>PC Quote SF Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Submitter__c</fullName>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_Submitter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Total_Cost_AIT__c</fullName>
        <label>Total Cost AIT</label>
        <summarizedField>Quote_Line__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>AIT</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_Total_Cost_EVM__c</fullName>
        <label>Total Cost EVM</label>
        <summarizedField>Quote_Line__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Product_Conversion__c</field>
            <operation>equals</operation>
            <value>EVM</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC__c</fullName>
        <description>Price Concession Number</description>
        <label>PC #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_All_Executed__c</fullName>
        <label>Price All Executed</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Siebel_Line_Id__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price_Concession_Error_Text__c</fullName>
        <label>Price Concession Error Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QLINo__c</fullName>
        <label>QLINo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadyForL2Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadyForL2Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Fields__c</fullName>
        <formula>OR( ISNULL( TEXT(Reason__c )), ISNULL( ExpirationDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reseller_Blended_Margin__c</fullName>
        <formula>IF(
Reseller_Total_Special_Value_New__c == 0, 
0, 
(Reseller_Total_Special_Value_New__c- Total_PC_Cost__c )/ Reseller_Total_Special_Value_New__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Blended Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reseller_Error_text__c</fullName>
        <label>Reseller Error text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reseller_Extra_Disc__c</fullName>
        <label>Reseller Extra Disc</label>
        <summarizedField>Quote_Line__c.PC_Disc__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reseller_Price__c</fullName>
        <label>Reseller Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reseller_Total_Special_Value_New__c</fullName>
        <label>Reseller Total Special Value New</label>
        <summarizedField>Quote_Line__c.Total_Net_Price__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reseller_Total_Special_Value__c</fullName>
        <formula>Reseller_Total_Special_Value_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Total Special Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <description>Reseller</description>
        <label>Reseller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Reseller)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResetPdtMgrApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ResetPdtMgrApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision_Error_Text__c</fullName>
        <label>Revision Error Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Quote_identifier__c</fullName>
        <formula>if(UPPER(PC_Legacy_SB_PE_Deal_ID__c)== UPPER(&apos;Unassigned&apos;), PC_Legacy_SB_Quote_ID__c , PC_Legacy_SB_PE_Deal_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy SB Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_PC_to_Partners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display PCs on Partner Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Id__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_PC_Number__c</fullName>
        <label>Siebel PC Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Condition__c</fullName>
        <description>Special Condition</description>
        <inlineHelpText>These notes are populated on the distributor and reseller PC notifications (like special condition in Siebel). Ensure your notes are appropriate for external view</inlineHelpText>
        <label>Special Conditions(Displayed Externally)</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Start</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Disti_Cost__c</fullName>
        <label>Total Disti Cost</label>
        <summarizedField>QuoteLineItem.Total_Disti_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Disti_Special_Price__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Value__c</fullName>
        <label>Total Gross Value</label>
        <summarizedField>Quote_Line__c.Total_PC_Cost__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_PC_Cost__c</fullName>
        <description>Sum of Line Items Reseller&apos;s Total cost</description>
        <label>Total PC Cost</label>
        <summarizedField>Quote_Line__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF(  
Disti_Total_Special_Value__c == 0, 
Reseller_Total_Special_Value_New__c, 
Disti_Total_Special_Value__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Manager_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Manager Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>Vertical</description>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hasBlankListPrice__c</fullName>
        <label>hasBlankListPrice</label>
        <summaryFilterItems>
            <field>Quote_Line__c.List_Price__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Unit_Special_Price__c</field>
            <operation>lessOrEqual</operation>
            <value>0.00</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Cancel_Flag__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>hasSimilarStdDisc__c</fullName>
        <label>hasSimilarStdDisc</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Matching_Discount__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Disti_Standard_Discount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>hasZeroStdDisc__c</fullName>
        <label>hasZeroStdDisc</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Zero_Total_Discount__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Cancel_Flag__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isDistiManagerApproval__c</fullName>
        <label>isDistiManagerApproval</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Dist_Margin_Approval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.Cancel_Flag__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isLaProductCategory_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLaProductCategory_Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNaProductCategory_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNaProductCategory_Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNaProductLine_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNaProductLine_Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNullPCAdmin_Approval__c</fullName>
        <label>isNullPCAdmin_Approval</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Uplifted_Cost__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Cancel_Flag__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isPCAdmin_Approval_Null__c</fullName>
        <label>isPCAdmin_Approval_Null</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Uplifted_Cost__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isPCAdmin_Approval__c</fullName>
        <label>isPCAdmin_Approval</label>
        <summarizedField>Quote_Line__c.Uplifted_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.Cancel_Flag__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isReadyForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReadyForApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Batch_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Batch Expired</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>PC_APAC</fullName>
        <active>true</active>
        <label>PC APAC</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_APAC_Approved</fullName>
        <active>true</active>
        <label>PC APAC Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_EMEA</fullName>
        <active>true</active>
        <label>PC EMEA</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_EMEA_Approved</fullName>
        <active>true</active>
        <description>Approved PC Record Type</description>
        <label>PC EMEA Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_NA</fullName>
        <active>true</active>
        <label>PC NA</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_NA_Approved</fullName>
        <active>true</active>
        <description>Record type for approved PC NA</description>
        <label>PC NA Approved</label>
    </recordTypes>
    <validationRules>
        <fullName>AIT_Account_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),ISBLANK(Opportunity.Account.AccountNumber),NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c) )</errorConditionFormula>
        <errorMessage>End User Account associated with this opportunity is not eligible for Price Concession, please contact System Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Account_Only_Financial</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;), Revision_Error_Text__c= NULL,Opportunity.Account.Financial_Customer_Flag__c &lt;&gt; true,Opportunity.Direct_End_User__c, NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c))</errorConditionFormula>
        <errorMessage>Price concession call cannot be made as End User is not an Financial/Orderable AIT Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Account_Only_Orderable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;), Revision_Error_Text__c=NULL,Opportunity.Account.Orderable_Flag__c &lt;&gt; true,Opportunity.Direct_End_User__c,NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c))</errorConditionFormula>
        <errorMessage>Price concession call cannot be made as End User is not an Financial/Orderable AIT Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Dist_Reseller_Account_Only_Financial</fullName>
        <active>false</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),  Reseller__r.Financial_Customer_Flag__c &lt;&gt; true, Opportunity.Direct_Distributor__c, NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c),($User.Theater_Code__c &lt;&gt; &apos;EMEA&apos;),($User.Theater_Code__c &lt;&gt; &apos;APAC&apos;) )</errorConditionFormula>
        <errorMessage>Price concession call cannot be made as Channel Partner is not an Financial/Orderable Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Dist_Reseller_Account_Only_Orderable</fullName>
        <active>false</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;), Reseller__r.Orderable_Flag__c &lt;&gt;true, Opportunity.Direct_Distributor__c, NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c),($User.Theater_Code__c &lt;&gt; &apos;EMEA&apos;),($User.Theater_Code__c &lt;&gt; &apos;APAC&apos;))</errorConditionFormula>
        <errorMessage>AIT Price Concession cannot be created as the Partner is not a current financial account. Current financial accounts have the orderable flag checked on the account record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Disti_Account_Only_Financial</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),Distributor__r.Financial_Customer_Flag__c &lt;&gt; true,Opportunity.Direct_Distributor__c )</errorConditionFormula>
        <errorDisplayField>Direct_Account_Currency__c</errorDisplayField>
        <errorMessage>Price concession call cannot be made as Distributor is not an Financial/Orderable Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Disti_Account_Only_Orderable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),Distributor__r.Orderable_Flag__c &lt;&gt; true,Opportunity.Direct_Distributor__c, NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c) )</errorConditionFormula>
        <errorDisplayField>Direct_Account_Currency__c</errorDisplayField>
        <errorMessage>Price Concession cannot be created as the Distributor is not a current financial account. Current financial accounts have the orderable flag checked on the account record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Disti_Without_Partner_Minus_APAC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),  NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c) ,ISPICKVAL(Opportunity.Fulfillment_Type__c,&apos;Distributor Sales Out&apos;), Opportunity.Owner_Theater__c &lt;&gt; &apos;APAC&apos;,  ISNEW(),AND (ISBLANK(Opportunity.Opportunity_Reseller__c), ISBLANK(Opportunity.Primary_Channel_Partner_AIT__c)))</errorConditionFormula>
        <errorMessage>Please select a Primary Channel Partner/Primary Channel Partner AIT for Opportunity when the fulfillment is set as Disti Sales Out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Distributor_AIT_Account_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;), ISBLANK(Distributor__r.AccountNumber), Opportunity.Direct_Distributor__c , NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c) )</errorConditionFormula>
        <errorDisplayField>Direct_Account_Currency__c</errorDisplayField>
        <errorMessage>Distributor Account associated with this opportunity is not eligible for Price Concession, please contact System Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_End_User_Account_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c),
 NOT(ISPICKVAL(End_User__r.Account_Type__c,&apos;End User&apos;)),OR(ISPICKVAL(Opportunity.Fulfillment_Type__c,&quot;Distributor Sales In&quot;),ISPICKVAL(Opportunity.Fulfillment_Type__c,&quot;OEM Direct&quot;),ISPICKVAL(Opportunity.Fulfillment_Type__c,&quot;Direct to End User&quot;)),ISNEW())</errorConditionFormula>
        <errorMessage>End User Account associated with this opportunity is not eligible for Price Concession, please contact System Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AIT_Reseller_AIT_Account_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($User.Alias &lt;&gt; &apos;zzebi&apos;),  ISNEW() ,ISBLANK(Reseller__r.AccountNumber), Opportunity.Direct_Distributor__c, NOT( $Setup.RulesDeactivateSwitch__c.PC_Switch__c)  )</errorConditionFormula>
        <errorDisplayField>Direct_Account_Currency__c</errorDisplayField>
        <errorMessage>Reseller Account associated with this opportunity is not eligible for Price Concession, please contact System Admin.</errorMessage>
    </validationRules>
</CustomObject>